# cgull

./: CMakeLists.txt  main.cpp
assets/splashes/: Untitled-1.psd
include/: Config.h
src/: Config.h
src/Background/: Background.cpp  Background.h
src/Button/: Button.cpp  Button.h
src/Screen/: Screen.cpp  Screen.h
src/Splash/: Splash.cpp  Splash.h
src/Sprite/: Sprite.cpp  Sprite.h
src/Text/: Text.cpp  Text.h
src/Texture/: Texture.cpp  Texture.h
